tests/syntax_error/bitwise_shift_left.jou
# TODO: Delete this file when you implement '<<' and create a tests/should_succeed/bitwise_shift_left.jou
def main() -> int:
    x = 1 << 2  # Error: sorry, the bitwise '<<' operator is not supported yet
